grammar.js
    unit: $ => repeat(choice(
      $._query,
      $._update
    )),

    comment: $ => /#.*/,

    // [2]
    _query: $ => seq(
      optional($.prologue),
      choice(
        $.select_query,
        $.construct_query,
        $.describe_query,
        $.ask_query,
      ),
      optional($.values_clause)
    ),

    // [3]
    // [29]
    // [30]
    _update: $ => seq(
      optional($.prologue),
      seq(
        choice(
          $.load,
          $.clear,
          $.drop,
          $.add,
          $.move,
          $.copy,
          $.create,
          $.insert_data,
          $.delete_data,
          $.delete_where,
          $.modify
        ),
        optional(seq(
          ';',
          $._update
        ))
      )
    ),

    // [4]
    prologue: $ => repeat1(choice(
      $.base_declaration,
      $.prefix_declaration
    )),

    // [5]
    base_declaration: $ => seq(
      'BASE'.toCaseInsensitiv(),
      $.iri_reference
    ),

    // [6]
    prefix_declaration: $ => seq(
      'PREFIX'.toCaseInsensitiv(),
      $.namespace,
      $.iri_reference
    ),

    // [7]
    select_query: $ => seq(
      $.select_clause,
      repeat($.dataset_clause),
      $.where_clause,
      optional($.solution_modifier)
    ),

    // [8]
    sub_select: $ => seq(
      $.select_clause,
      $.where_clause,
      optional($.solution_modifier),
      optional($.values_clause)
    ),

    // [9]
    select_clause: $ => seq(
      'SELECT'.toCaseInsensitiv(),
      optional(choice(
        'DISTINCT'.toCaseInsensitiv(),
        'REDUCED'.toCaseInsensitiv()
      )),
      choice(
        repeat1(choice(
          $.var,
          seq('(', $._expression, 'AS'.toCaseInsensitiv(), $.var, ')')
        )),
        '*'
      )
    ),

    // [10]
    construct_query: $ => seq(
      'CONSTRUCT'.toCaseInsensitiv(),
      choice(
        seq(
          $.construct_template,
          repeat($.dataset_clause),
          $.where_clause,
          optional($.solution_modifier)
        ),
        seq(
          repeat($.dataset_clause),
          'WHERE'.toCaseInsensitiv(), '{', $.triples_template, '}',
          optional($.solution_modifier)
        )
      )
    ),

    // [11]
    describe_query: $ => seq(
      'DESCRIBE'.toCaseInsensitiv(),
      choice(
        repeat1($._var_or_iri),
        '*'
      ),
      repeat($.dataset_clause),
      optional($.where_clause),
      optional($.solution_modifier)
    ),

    // [12]
    ask_query: $ => seq(
      'ASK'.toCaseInsensitiv(),
      repeat($.dataset_clause),
      $.where_clause,
      optional($.solution_modifier)
    ),

    // [13]
    dataset_clause: $ => seq(
      'FROM'.toCaseInsensitiv(),
      choice(
        $.default_graph_clause,
        $.named_graph_clause
      )
    ),

    // [14]
    // [16]
    where_clause: $ => seq(
      optional('WHERE'.toCaseInsensitiv()),
      $.group_graph_pattern
    ),

    // [18]
    values_clause: $ => seq(
      'VALUES'.toCaseInsensitiv(),
      $._data_block
    ),

    // [31]
    load: $ => seq(
      'LOAD'.toCaseInsensitiv(),
      optional('SILENT'.toCaseInsensitiv()),
      $._iri,
      optional(seq('INTO'.toCaseInsensitiv(), $.graph_ref))
    ),

    // [32]
    insert_data: $ => seq('INSERT DATA', $.quads),

    // [39]
    graph_ref: $ => seq('GRAPH'.toCaseInsensitiv(), $._iri),

    // [47]
    quads: $ => seq(
      '{',
      optional($.triples_template),
      repeat(seq(
        $.quads_not_triples,
        optional('.'),
        optional($.triples_template),
      )),
      '}'
    ),

    // [51]
    quads_not_triples: $ => seq(
      'GRAPH'.toCaseInsensitiv(),
      $._var_or_iri,
      '{',
      optional($.triples_template),
      '}'
    ),

    // [52]
    triples_template: $ => seq(
      $.triples_same_subject,
      repeat(seq(
        '.',
        $.triples_same_subject
      )),
      optional('.')
    ),

    // [53]
    // [54]
    group_graph_pattern: $ => seq(
      '{',
      choice(
        $.sub_select,
        seq(
          optional($.triples_block),
          repeat(seq(
            $._graph_pattern_not_triples,
            optional('.'),
            optional($.triples_block)
          ))
        )
      ),
      '}'
    ),

    // [55]
    triples_block: $ => seq(
      $.triples_same_subject_path,
      repeat(seq(
        '.',
        $.triples_same_subject_path
      )),
      optional('.')
    ),

    // [56]
    _graph_pattern_not_triples: $ => choice(
      $.group_or_union_graph_pattern,
      $.optional_graph_pattern,
      $.minus_graph_pattern,
      $.graph_graph_pattern,
      $.service_graph_pattern,
      $.filter,
      $.bind,
      $.inline_data
    ),

    // [57]
    optional_graph_pattern: $ => seq('OPTIONAL'.toCaseInsensitiv(), $.group_graph_pattern),

    // [58]
    _data_block: $ => choice(
      $.inline_data_one_var,
      $.inline_data_full
    ),

    // [63]
    minus_graph_pattern: $ => seq('MINUS'.toCaseInsensitiv(), $.group_graph_pattern),

    // [67]
    group_or_union_graph_pattern: $ => seq(
      $.group_graph_pattern,
      repeat(seq('UNION'.toCaseInsensitiv(), $.group_graph_pattern))
    ),

    // [68]
    filter: $ => seq('FILTER'.toCaseInsensitiv(), $._constraint),

    // [69]
    _constraint: $ => choice(
      $.bracketted_expression,
      $._build_in_call,
      $.function_call
    ),

    // [70]
    construct_template: $ => seq(
      '{',
      $.construct_triples,
      '}'
    ),

    // [74]
    construct_triples: $ => seq(
      $.triples_same_subject,
      repeat(seq(
        '.',
        $.triples_same_subject
      )),
      optional('.')
    ),

    // [75]
    // [76]
    triples_same_subject: $ => choice(
      seq(
        $._var_or_term,
        $.property_list
      ),
      seq(
        $._triples_node,
        optional($.property_list)
      )
    ),

    // [77]
    // [78]
    property_list: $ => seq(
      field('predicate', choice(
        $._var_or_iri,
        'a'
      )),
      $.object_list,
      repeat(
        seq(
          ';',
          optional(seq(
            field('predicate', choice(
              $._var_or_iri,
              'a'
            )),
            $.object_list
          ))
        )
      )
    ),

    // [79]
    // [80]
    object_list: $ => seq(
      $._graph_node,
      repeat(seq(',', $._graph_node))
    ),

    // [81]
    // [82]
    triples_same_subject_path: $ => choice(
      seq(
        field('subject', $._var_or_term),
        $.property_list_path),
      seq(
        $._triples_node_path,
        optional($.property_list_path)
      )
    ),

    // [83]
    // [84]
    // [85]
    property_list_path: $ => seq(
      field('predicate', choice(
        $._path,
        $.var
      )),
      $.object_list_path,
      repeat(seq(
        ';',
        optional(seq(
          field('predicate', choice(
            $._path,
            $.var
          )),
          $.object_list,
        ))
      ))
    ),

    // [86]
    // [87]
    object_list_path: $ => seq(
      $._graph_node_path,
      repeat(seq(',', $._graph_node_path)
      )
    ),

    // [88 - 92]
    _path: $ => choice(
      $.path_element,
      $.binary_path
    ),

    binary_path: $ => choice(
      prec.left(1, seq($._path, '/', $._path)),
      prec.left(seq($._path, '|', $._path))
    ),

    path_element: $ => seq(
      optional($.path_inverse),
      $._primary_path,
      optional($.path_mod)
    ),

    // [92]
    path_inverse: $ => '^',

    // [93]
    path_mod: $ => token(choice(
      '?',
      '*',
      '+'
    )),

    // [94]
    _primary_path: $ => choice(
      $._iri,
      'a',
      seq('!', $.path_negated_property_set),
      seq('(', $._path, ')')
    ),

    // [95]
    _triples_node: $ => choice(
      $.collection,
      $.blank_node_property_list
    ),

    // [99]
    blank_node_property_list: $ => seq(
      '[',
      $.property_list,
      ']'
    ),

    // [100]
    _triples_node_path: $ => choice(
      $.collection_path,
      $.blank_node_property_list_path
    ),

    // [101]
    collection: $ => seq(
      '(',
      repeat1($._graph_node),
      ')'
    ),

    // [103]
    _graph_node: $ => choice(
      $._var_or_term,
      $._triples_node
    ),

    // [105]
    _graph_node_path: $ => choice(
      $._var_or_term,
      $._triples_node_path
    ),

    // [106]
    _var_or_term: $ => choice(
      $.var,
      $._graph_term
    ),

    // [107]
    _var_or_iri: $ => choice(
      $.var,
      $._iri,
    ),

    // [108, 143, 144, 166]
    var: $ => token(seq(
      choice(
        '?',
        '$'
      ),
      choice(
        ...PN_CHARS_U,
        /[0-9]/
      ),
      repeat(choice(
        ...PN_CHARS_U,
        /[0-9]/,
        /[\u00B7]/,
        /[\u0300-\u036F]/,
        /[\u203F-\u2040]/
      ))
    )),

    // [109]
    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression
    ),

    // [110 - 117]
    binary_expression: $ => choice(
      // conditional
      prec.left(seq($._expression, '||', $._expression)),
      prec.left(1, seq($._expression, '&&', $._expression)),
      // relational
      prec.left(2, seq($._expression, '=', $._expression)),
      prec.left(2, seq($._expression, '<', $._expression)),
      prec.left(2, seq($._expression, '>', $._expression)),
      prec.left(2, seq($._expression, '<=', $._expression)),
      prec.left(2, seq($._expression, '>=', $._expression)),
      prec.left(2, seq($._expression, 'IN'.toCaseInsensitiv(), $.expression_list)),
      prec.left(2, seq($._expression, 'NOT'.toCaseInsensitiv(), 'IN'.toCaseInsensitiv(), $.expression_list)),
      // numeric
      prec.left(3, seq($._expression, '+', $._expression)),
      prec.left(3, seq($._expression, '-', $._expression)),
      prec.left(4, seq($._expression, '*', $._expression)),
      prec.left(4, seq($._expression, '/', $._expression)),
    ),

    // [118]
    bracketted_expression: $ => seq(
      '(',
      $._expression,
      ')'
    ),

    // [121]
    build_in_function: $ => choice(
      $._nullary_build_in_function,
      $._unary_build_in_function,
      $._binary_build_in_function,
      $._variadic_build_in_function,
      seq(
        'BOUND'.toCaseInsensitiv(),
        field('arguments', seq('(', $.var, ')'))),
      seq(
        'BNODE'.toCaseInsensitiv(),
        field('arguments', choice($.bracketted_expression, $.nil))
      ),
      seq(
        'IF'.toCaseInsensitiv(),
        field('arguments', seq('(', $._expression, ',', $._expression, ',', $._expression, ')'))),
    ),

    _nullary_build_in_function: $ => seq(
      choice(
        ...[
          'NOW',
          'RAND',
          'STRUUID',
          'UUID'
        ].map(i => i.toCaseInsensitiv())
      ),
      field('arguments', $.nil)
    ),


    _unary_build_in_function: $ => seq(
      choice(
        ...[
          'ABS',
          'CEIL',
          'DATATYPE',
          'DAY',
          'ENCODE_FOR_URI',
          'FLOOR',
          'HOURS',
          'IRI',
          'LANG',
          'LCASE',
          'MD5',
          'MINUTES',
          'MONTH',
          'ROUND',
          'SECONDS',
          'SHA1',
          'SHA256',
          'SHA384',
          'SHA512',
          'STR',
          'STRLEN',
          'TIMEZONE',
          'TZ',
          'UCASE',
          'URI',
          'YEAR',
          'isBLANK',
          'isIRI',
          'isLITERAL',
          'isNUMERIC',
          'isURI',
        ].map(i => i.toCaseInsensitiv())
      ),
      field('arguments', $.bracketted_expression)
    ),

    _binary_build_in_function: $ => seq(
      choice(
        ...[
          'CONTAINS',
          'LANGMATCHES',
          'STRAFTER',
          'STRBEFORE',
          'STRDT',
          'STRENDS',
          'STRLANG',
          'STRSTARTS',
          'sameTerm',
        ].map(i => i.toCaseInsensitiv())
      ),
      field('arguments', seq('(', $._expression, ',', $._expression, ')'))
    ),

    _variadic_build_in_function: $ => seq(
      choice(
        ...[
          'CONCAT',
          'COALESCE',
        ].map(i => i.toCaseInsensitiv())
      ),
      field('arguments', $.expression_list)
    ),

    // [122]
    regex_expression: $ => seq(
      'REGEX'.toCaseInsensitiv(),
      seq('(',
        field('text', $._expression),
        ',',
        field('pattern', $._expression),
        optional(seq(
          ',',
          field('flag', $._expression))
        ),
        ')'
      )
    ),

    // [123]
    not_exists_func: $ => seq(
      'NOT'.toCaseInsensitiv(),
      'EXISTS'.toCaseInsensitiv(),
      $.group_graph_pattern
    ),

    // [127]
    rdf_literal: $ => seq(
      field('value', $.string),
      optional(choice(
        $.lang_tag,
        field('datatype', seq('^^', $._iri))
      ))
    ),

    string: $ => choice(
      $._string_literal1,
      $._string_literal2,
      $._string_literal_long1,
      $._string_literal_long2,
    ),

    // [136]
    _iri: $ => choice(
      $.iri_reference,
      $.prefixed_name
    ),


    // [137]
    // [141]
    prefixed_name: $ => seq(
      $.namespace,
      optional($.pn_local)
    ),

    // [138]
    iri_reference: $ => token(seq(
      '<',
      /([^<>"{}|^`\\\x00-\x20])*/,
      '>'
    )),

    // [140]
    namespace: $ => seq(
      optional($.pn_prefix),
      ':'
    ),

    // [142]
    blank_node_label: $ => seq(
      '_:',
      token.immediate(
        choice(
          ...PN_CHARS_U,
          /[0-9]/
        ),
        optional(seq(
          repeat(choice(
            ...PN_CHARS,
            '.'
          )),
          choice(...PN_CHARS)
        ))
      )
    ),

    // [145]
    integer: $ => token(/[0-9]+/),

    // [147]
    _string_literal1: $ => seq(
      "'",
      repeat(choice(
        /[^\x27\x5C\x0A\x0D]/,
        $.echar
      )),
      "'"
    ),

    // [157]
    _string_literal2: $ => seq(
      '"',
      repeat(choice(
        /[^\x22\x5C\x0A\x0D]/,
        $.echar
      )),
      '"',
    ),

    // [158]
    _string_literal_long1: $ => seq(
      "'''",
      repeat(seq(
        optional(choice(
          "'",
          "''",
        )),
        choice(
          /[^'\\]/,
          $.echar
        )
      )),
      "'''",
    ),

    // [159]
    _string_literal_long2: $ => seq(
      '"""',
      repeat(seq(
        optional(choice(
          '"',
          '""',
        )),
        choice(
          /[^"\\]/,
          $.echar
        )
      )),
      '"""',
    ),
    
    // [160]
    nil: $ => token(seq(
      '(',
      repeat(choice(...WS)),
      ')'
    )),

    // [163]
    pn_prefix: $ => token(seq(
      choice(...PN_CHARS_BASE),
      optional(seq(
        repeat(choice(
          ...PN_CHARS,
          '.'
        )),
        choice(...PN_CHARS)
      ))
    )),

    // [169]
    pn_local: $ => token.immediate(seq(
      choice(
        ...PN_CHARS_U,
        ':',
        /[0-9]/,
        seq('%', choice(...HEX), choice(...HEX)),
        ...PN_LOCAL_ESC
      ),
      optional(seq(
        repeat(choice(
          ...PN_CHARS,
          '.',
          ':',
          seq('%', choice(...HEX), choice(...HEX)),
          ...PN_LOCAL_ESC
        )),
        choice(
          ...PN_CHARS,
          ':',
          seq('%', choice(...HEX), choice(...HEX)),
          ...PN_LOCAL_ESC
        )
      ))
    )),
  }
});
