test/corpus/operators.txt
======
Regex
======

SELECT * {
  FILTER regex(?s, '^foo', 'i')
}

---

(unit
  (select_query
    (select_clause)
    (where_clause
      (group_graph_pattern
        (filter
          (regex_expression
            text: (var)
            pattern: (rdf_literal value: (string)) 
            flag: (rdf_literal value: (string))))))))
