test/corpus/property-paths.txt
=============
Alternative
=============

SELECT * {
  ?s :a|:b ?o
}

---

(unit
  (select_query
    (select_clause)
    (where_clause
      (group_graph_pattern
        (triples_block
          (triples_same_subject
            (var)
            (property_list (property
              (binary_path
                (path_element (prefixed_name (pname_ns) (pn_local)))
                (path_element (prefixed_name (pname_ns) (pn_local))))
              (object_list (var))))))))))

=========
Sequence
=========

SELECT * {
  ?s :a/:b ?o
}

---

(unit
  (select_query
    (select_clause)
    (where_clause
      (group_graph_pattern
        (triples_block
          (triples_same_subject
            (var)
            (property_list (property
              (binary_path
                (path_element (prefixed_name (pname_ns) (pn_local)))
                (path_element (prefixed_name (pname_ns) (pn_local))))
              (object_list (var))))))))))

=========
Modifier
=========

SELECT * {
  ?s ^:p? ?o
}

---

(unit
  (select_query
    (select_clause)
    (where_clause
      (group_graph_pattern
        (triples_block
          (triples_same_subject
            (var)
            (property_list (property
              (path_element
                (path_inverse)
                (prefixed_name (pname_ns) (pn_local))
                (path_mod))
            (object_list (var))))))))))
