test/corpus/values_clause.txt
==============
Values clause
==============


SELECT * {}

VALUES


---


(query_unit
  (query 
    (select_query 
      (select_clause)
      (where_clause
        (group_graph_pattern))) 
    (values_clause)))
